# haskell-book-exercises

./: .tool-versions  README.md  stack.yaml
chap1-11/: exercises.md
chap1-6/: intermission-equivalence.md
chap10-10/: rewriting-functions-using-folds.hs  warm-up-and-review.hs
chap10-5/: understanding-folds.md
chap10-6/: database-processing.hs
chap10-9/: scans-exercises.hs
chap11-10/: pity-the-bool.hs
chap11-12/: how-does-your-garden-grow.hs
chap11-13/: programmers.hs
chap11-14/: the-quad.hs
chap11-17/: binary-tree.hs
chap11-18/: as-patterns.hs  ciphers.hs  huttons-razor.hs  language-exercises.hs  multiple-choice.md  phone-exercise.hs
chap11-5/: dog-types.md
chap11-6/: vehicles.hs
chap11-8/: cardinality.md  for-example.hs
chap11-9/: logic-goats.hs
chap12-5/: determine-the-kinds.md  finally-something-other-than-a-list.hs  its-only-natural.hs  small-library-for-either.hs  small-library-for-maybe.hs  string-processing.hs  validate-the-word.hs  write-your-own-iterate-and-unfoldr.hs
chap13-14/: modifying-code.hs
chap13-6/: check-your-understanding.md
chap14-7/: wordnumber.cabal
chap15-10/: optional-monoid.hs
chap15-11/: madness.hs
chap15-12/: maybe-another-monoid.hs
chap15-15/: semigroup-monoid-exercises.hs
chap16-10/: instances-of-func.hs
chap16-11/: possibly.hs  short-exercise.hs
chap16-17/: chapter-exercises.hs
chap16-4/: be-kind.md
chap16-7/: heavy-lifting.hs
chap17-5/: constant-instance.hs  fixer-upper.hs  identity-instance.hs  (+1 more)
hangman/: hangman.cabal
hangman/src/: Main.hs  hangman.hs
hangman/tests/: tests.hs
(+72 files in other folders)
