name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            Chris N Julie
license:             BSD3
license-file:        LICENSE
author:              Chris Allen and Julie Moronuki
maintainer:          haskellbook.com
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

library
  exposed-modules:  Hangman
  ghc-options:      -Wall -fwarn-tabs
  hs-source-dirs:   src
  build-depends:    base >=4.7 && <5
                  , random
                  , split
  default-language: Haskell2010

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , hangman
                     , random
  default-language:    Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          tests.hs
  hs-source-dirs:   tests
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >=4.7 && <5
                  , hangman
                  , QuickCheck
                  , hspec
  default-language: Haskell2010
